Events, number generation, payment, shipment

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "php" : ">=5.4",
         "symfony/framework-bundle" : "~2.3",
         "ekyna/admin-bundle" : "0.1.*@dev",
-        "ekyna/product-bundle" : "0.1.*@dev"
+        "ekyna/product-bundle" : "0.1.*@dev",
+        "ekyna/payment-bundle" : "0.1.*@dev",
+        "ekyna/shipment-bundle" : "0.1.*@dev"
     },
     "autoload" : {
         "psr-0" : {
