--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "ekyna/admin-bundle" : "0.1.*@dev",
         "ekyna/product-bundle" : "0.1.*@dev",
         "ekyna/payment-bundle" : "0.1.*@dev",
-        "ekyna/shipment-bundle" : "0.1.*@dev"
+        "ekyna/shipment-bundle" : "0.1.*@dev",
+        "knplabs/knp-snappy-bundle": "dev-master"
     },
     "autoload" : {
         "psr-0" : {
