--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,10 @@
         "knplabs/knp-snappy-bundle": "~1.2"
     },
     "autoload" : {
-        "psr-0" : {
-            "Ekyna\\Bundle\\OrderBundle" : ""
+        "psr-4" : {
+            "Ekyna\\Bundle\\OrderBundle\\" : ""
         }
     },
-    "target-dir" : "Ekyna/Bundle/OrderBundle",
     "extra" : {
         "branch-alias" : {
             "dev-master" : "0.3.x-dev"
