--- a/Resources/config/prepend/winzouStateMachineBundle.yml
+++ b/Resources/config/prepend/winzouStateMachineBundle.yml
@@ -28,5 +28,9 @@ winzou_state_machine:
                 from: [accepted, completed]
                 to:   refunded
             cancel:
-                from: [new, pending]
+                from: [new, pending, accepted]
                 to:   cancelled
+            # When payments are cancelled.
+            reset:
+                from: [new, pending, accepted]
+                to: new
