[OrderBundle] * Removed required config. * Fix order delete. * Fix item helper * Number and key generation * Added order state reset transition

--- a/Resources/config/prepend/winzouStateMachineBundle.yml
+++ b/Resources/config/prepend/winzouStateMachineBundle.yml
@@ -28,5 +28,9 @@ winzou_state_machine:
                 from: [accepted, completed]
                 to:   refunded
             cancel:
-                from: [new, pending]
+                from: [new, pending, accepted]
                 to:   cancelled
+            # All payments removed.
+            reset:
+                from: [new, pending, accepted, refused]
+                to: new
